--- a/style.css
+++ b/style.css
@@ -1,1 +1,13 @@
 @import "node_modules/open-props/open-props.min.css";
+
+@font-face {
+  font-family: "DungGeunMo";
+  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/DungGeunMo.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+body {
+  font-family: "DungGeunMo", var(--font-system-ui);
+}
+
