design: a 태그 기본 스타일 제거

--- a/style.css
+++ b/style.css
@@ -11,3 +11,11 @@ body {
   font-family: "DungGeunMo", var(--font-system-ui);
 }
 
+a,
+a:link,
+a:visited,
+a:active,
+a:hover {
+  text-decoration: none;
+  color: inherit;
+}
