feat: 카드 컴포넌트 생성

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 @import "/node_modules/open-props/open-props.min.css";
 @import "./css/header.css";
 @import "./css/footer.css";
+@import "./css/card.css";
 
 @font-face {
   font-family: "DungGeunMo";
