--- a/src/css/card.css
+++ b/src/css/card.css
@@ -1,3 +1,12 @@
+.card-container {
+  width: 68rem;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 4rem 0;
+}
+
 .card {
   max-width: 16rem;
   height: 16rem;
