--- a/src/css/card.css
+++ b/src/css/card.css
@@ -15,9 +15,26 @@
   overflow: hidden;
   flex-direction: column;
   border-radius: var(--radius-2);
-  background-color: var(--white);
+  background-image: linear-gradient(163deg, #00ff75 0%, #3700ff 100%);
+  border-radius: var(--radius-2);
   color: var(--stone-8);
   box-shadow: var(--shadow-2);
+}
+
+.card-inner {
+  max-width: 16rem;
+  height: 16rem;
+  background-color: var(--stone-0);
+  transition: all 0.2s;
+}
+
+.card-inner:hover {
+  transform: scale(0.98);
+  border-radius: var(--radius-2);
+}
+
+.card:hover {
+  box-shadow: 0px 0px 10px 1px rgba(0, 255, 117, 0.3);
 }
 
 .card-img-top {
